eliminar li pares

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <li><span>texto ejemplo 5</span></li>
     </ul>
     <h2>Lista 2</h2>
-    <ul id="list2"></ul>
+    <ul id="list2">
+      
+    </ul>
   </body>
 </html>
